[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seeking"
version = "0.1.0"
description = "Arcade + PyTorch experimentation playground for reinforcement learning in 2D environments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Seeking Contributors"}]
dependencies = [
    "arcade>=2.6.17",
    "torch>=2.1",
    "numpy>=1.24",
    "rich>=13.7",
    "pygame>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[project.scripts]
seeking = "seeking.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
